--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,11 +82,21 @@ h6 {
   max-width: 100%;
   margin: 0;
   padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+.header {
+  background-color: #ddd;
+  height: 80px;
 }
 
 .nav-bar {
-  background-color: #ddd;
-  height: 80px;
+  width: 1200px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .jumbotron {
