--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,13 +78,21 @@ h6 {
 /* CUSTOM CSS */
 
 h1 {
-
+  font-size: 5rem;
+  font-weight: 900;
+  text-align: center;
 }
 
 h2 {
   font-size: 3rem;
   font-weight: 800;
 }
+
+h3 {
+  font-size: 2.5rem;
+  font-weight: 800;
+}
+
 
 .container {
   width: 100%;
@@ -149,14 +157,22 @@ button {
 }
 
 
-
-
 /* Section - Our Expertise */
 
 .section-our-expertise {
   background-color: #ddd;
   height: 1200px;
 }
+
+.our-expertise-card {
+  width: 100%;
+  background-color: #fff;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  padding-left: 72px;
+  padding-right: 72px;
+}
+
 
 .section-our-misson {
   background-color: #eee;
