STYLE: Initial styling of the Our Expertise section - Home page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,7 +161,7 @@ button {
 
 .section-our-expertise {
   background-color: #ddd;
-  height: 1200px;
+  padding-bottom: 60px;
 }
 
 .our-expertise-card {
