--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,13 +84,28 @@ h1 {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 3.5rem;
   font-weight: 800;
 }
 
 h3 {
   font-size: 2.5rem;
   font-weight: 800;
+}
+
+h4 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+h5 {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+h6 {
+  font-size: 1.25rem;
+  font-weight: 700;
 }
 
 
@@ -182,10 +197,20 @@ button {
 }
 
 
+/* SECTION - TESTIMONIALS */
 
 .section-testimonials {
   background-color: #ddd;
-  height: 600px;
+}
+
+.testimonials-card {
+  width: 840px;
+  height: 320px;
+  background-color: #fff;
+  padding-top: 36px;
+  padding-bottom: 36px;
+  padding-left: 36px;
+  padding-right: 60px;
 }
 
 .footer {
