--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,37 +78,48 @@ h6 {
 
 /* TEXT */
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Montserrat;
+  font-weight: 800;
+}
+
 h1 {
   font-size: 5rem;
-  font-weight: 900;
 }
 
 h2 {
   font-size: 3.5rem;
-  font-weight: 800;
 }
 
 h3 {
   font-size: 2.5rem;
-  font-weight: 800;
 }
 
 h4 {
   font-size: 2rem;
-  font-weight: 700;
 }
 
 h5 {
   font-size: 1.5rem;
-  font-weight: 700;
 }
 
 h6 {
   font-size: 1.25rem;
-  font-weight: 700;
 }
 
+p {
+  font-size: 1.125rem;
+  font-family: Inter;
+}
 
+/* .nav-bar-link {
+
+} */
 
 
 
