--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,8 @@ h6 {
   font-size: 1.25rem;
 }
 
-p {
+p,
+li {
   font-size: 1.125rem;
   font-family: Inter;
 }
@@ -120,6 +121,9 @@ p {
 
 /* COLOURS */
 
+.text-parc-red {
+  color: #ED2D24;
+}
 
 
 /* CONTAINER */
@@ -260,17 +264,19 @@ p {
 /* SECTION - OUR EXPERTISE */
 
 .section-our-expertise {
-  background-color: #ddd;
+  background-color: #f5f5f5;
   padding-bottom: 60px;
 }
 
 .our-expertise-card {
   width: 100%;
   background-color: #fff;
-  padding-top: 36px;
-  padding-bottom: 36px;
-  padding-left: 72px;
-  padding-right: 72px;
+  padding-top: 48px;
+  padding-bottom: 48px;
+  padding-left: 96px;
+  padding-right: 96px;
+  border-radius: 24px;
+  box-shadow: 0 0 24px rgba(0, 0, 0, 0.12);
 }
 
 
