STYLE: Home Page - Add hover state to the Our Expertise card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,6 @@ li {
 }
 
 .button {
-  display: block;
   min-width: 300px;
   max-width: 480px;
 }
@@ -272,13 +271,16 @@ li {
   width: 100%;
   background-color: #fff;
   padding-top: 48px;
-  padding-bottom: 48px;
+  padding-bottom: 36px;
   padding-left: 96px;
   padding-right: 96px;
   border-radius: 24px;
   box-shadow: 0 0 24px rgba(0, 0, 0, 0.12);
 }
 
+.our-expertise-card:hover {
+  outline: 4px solid #ED2D24;
+}
 
 /* SECTION - OUR MISSION */
 
