--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,32 @@ li {
 }
 
 
+/* SCROLL TO TOP BUTTON */
+
+#scrollTopBtn {
+  position: fixed;
+  bottom: 36px;
+  right: 36px;
+  width: 60px;
+  height: 60px;
+  z-index: 100;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.36);
+  color: white;
+  padding: 12px 16px;
+  font-size: 18px;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  display: none; /* Hidden by default */
+  transition: opacity 0.3s;
+}
+
+#scrollTopBtn:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+
 /* NAVBAR */
 
 .navbar {
@@ -387,4 +413,3 @@ li {
 .section-copyright {
   border-top: 1px solid #666;
 }
-
