--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,6 +392,42 @@ li {
 }
 
 
+/* SECTION - TESTIMONIALS (TRY OUT) */
+
+.carousel-strip-wrapper {
+  scroll-snap-type: x mandatory;
+}
+
+.carousel-strip {
+  scroll-behavior: smooth;
+  scroll-snap-type: x mandatory;
+  overflow-x: hidden;
+}
+
+.slide {
+  flex: 0 0 200px;
+  height: 150px;
+  scroll-snap-align: center;
+  line-height: 150px;
+  font-size: 2rem;
+  min-width: 600px;
+}
+
+.dot {
+  height: 8px;
+  width: 8px;
+  background-color: #ccc;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+
+.dot.active {
+  background-color: #0d6efd;
+}
+
+
 /* FOOTER */
 
 .section-footer {
