--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,8 @@ li {
   min-width: 720px;
   height: 310px;
   scroll-snap-align: center;
-  box-shadow: 0 0 24px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 0 24px rgba(0, 0, 0, 0.01);
+  transition: box-shadow 0.3s ease;
   font-size: 2rem;
   border-radius: 24px;
   padding-top: 24px;
@@ -405,10 +406,14 @@ li {
   padding-right: 48px;
 }
 
+.active-slide {
+  box-shadow: 0 0 36px rgba(0, 0, 0, 0.6);
+}
+
 .dot {
   height: 8px;
   width: 8px;
-  background-color: #ccc;
+  background-color: #fff;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.3s ease;
