--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,8 +235,9 @@ li {
   font-size: 18px;
   border-radius: 50%;
   cursor: pointer;
-  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  display: none; /* Hidden by default */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  display: none;
+  /* Hidden by default */
   transition: opacity 0.3s;
 }
 
@@ -305,9 +306,11 @@ li {
   width: 100%;
   height: 100%;
   opacity: .25;
-  object-fit: cover; /* or contain */
+  object-fit: cover;
+  /* or contain */
   z-index: -1;
-  pointer-events: none; /* makes it transparent to hover */
+  pointer-events: none;
+  /* makes it transparent to hover */
   transition: transform 3s ease;
   overflow: visible;
 }
@@ -433,28 +436,25 @@ li {
   top: 0;
   bottom: 0;
   width: 280px;
-  pointer-events: none; /* allow clicks through */
+  pointer-events: none;
+  /* allow clicks through */
   z-index: 2;
 }
 
 .carousel-fade-left {
   left: 0;
-  background: linear-gradient(
-    to right,
-    rgba(229,229,229,1) 0%,
-    rgba(229,229,229,0.9) 60%,
-    rgba(229,229,229,0) 100%
-    );
+  background: linear-gradient(to right,
+      rgba(229, 229, 229, 1) 0%,
+      rgba(229, 229, 229, 0.9) 60%,
+      rgba(229, 229, 229, 0) 100%);
 }
 
 .carousel-fade-right {
   right: 0;
-  background: linear-gradient(
-    to left,
-    rgba(229,229,229,1) 0%,
-    rgba(229,229,229,0.9) 60%,
-    rgba(229,229,229,0) 100%
-    );
+  background: linear-gradient(to left,
+      rgba(229, 229, 229, 1) 0%,
+      rgba(229, 229, 229, 0.9) 60%,
+      rgba(229, 229, 229, 0) 100%);
 }
 
 
@@ -484,4 +484,18 @@ li {
 
 .section-copyright {
   border-top: 1px solid #666;
+}
+
+.fa-linkedin-in {
+  padding: 10px 10px;
+  font-size: 18px;
+  background-color: #aaa;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  text-align: center;
+}
+
+.fa-linkedin-in:hover {
+  background-color: #fff;
 }
