--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,22 +93,10 @@ h1 {
 }
 
 h2 {
-  font-size: 3.5rem;
-}
-
-h3 {
   font-size: 2.5rem;
 }
 
-h4 {
-  font-size: 2rem;
-}
-
-h5 {
-  font-size: 1.5rem;
-}
-
-h6 {
+h3 {
   font-size: 1.25rem;
 }
 
@@ -116,6 +104,11 @@ p,
 li {
   font-size: 1.125rem;
   font-family: Inter;
+}
+
+.text-jumbotron {
+  font-size: 3.5rem;
+  font-weight: 700;
 }
 
 .text-1-250 {
