--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,6 +463,8 @@ li {
 
 .section-footer {
   margin: auto;
+  padding-top: 24px;
+  padding-bottom: 48px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -499,4 +501,24 @@ li {
 
 .fa-linkedin-in:hover {
   background-color: #fff;
+}
+
+/* --------------------------------------------------------------------------------------------------------- */
+
+/* Media queries */
+
+@media (max-width: 1200px) {
+  .footer-links {
+    display: block;
+  }
+
+  .footer-links li {
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
+
+  .section-footer {
+    padding-top: 4px;
+    padding-bottom: 24px;
+  }
 }
