--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,10 @@ li {
   font-weight: 700;
 }
 
+.text-1-500 {
+  font-size: 1.5rem;
+}
+
 .text-1-250 {
   font-size: 1.25rem;
 }
@@ -278,6 +282,44 @@ li {
 
 .navigation-mobile {
   display: none;
+}
+
+/* Fullscreen Menu Overlay */
+.menu-overlay {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  /* Hidden off-screen */
+  width: 100%;
+  height: 100%;
+  background: #222;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: right 0.4s ease;
+  z-index: 2000;
+}
+
+.menu-overlay.active {
+  right: 0;
+  /* Slides into view */
+}
+
+.menu-overlay ul {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
+
+.menu-overlay ul li {
+  margin: 20px 0;
+}
+
+.menu-overlay ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 2rem;
 }
 
 
