--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,7 @@ li {
   height: 100%;
   background: #222;
   color: #fff;
-  display: flex;
+  display: block;
   justify-content: center;
   align-items: center;
   transition: right 0.4s ease;
