--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -292,7 +292,7 @@ li {
   /* Hidden off-screen */
   width: 100%;
   height: 100%;
-  background: #222;
+  background: #D62920;
   color: #fff;
   display: block;
   justify-content: center;
@@ -319,7 +319,7 @@ li {
 .menu-overlay ul li a {
   color: #fff;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.75rem;
 }
 
 
