--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,8 @@ h3 {
 }
 
 p,
-li {
+li,
+a {
   font-size: 1.125rem;
   font-family: Inter;
 }
@@ -109,6 +110,10 @@ li {
 .text-jumbotron {
   font-size: 3.5rem;
   font-weight: 700;
+}
+
+.text-1-750 {
+  font-size: 1.5rem;
 }
 
 .text-1-500 {
@@ -200,6 +205,7 @@ li {
   width: 100%;
   padding-left: 60px;
   padding-right: 60px;
+  font-family: Inter;
   font-size: 1.375rem;
   font-weight: 600;
   border-top-left-radius: 84px;
@@ -309,17 +315,17 @@ li {
 .menu-overlay ul {
   list-style: none;
   padding: 0;
-  text-align: center;
+  text-align: left;
 }
 
 .menu-overlay ul li {
-  margin: 20px 0;
+  margin: 0px;
 }
 
 .menu-overlay ul li a {
   color: #fff;
   text-decoration: none;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
 
 
@@ -615,6 +621,13 @@ li {
     display: flex;
     justify-content: center;
     padding: 12px;
+  }
+
+  .fa-linkedin-in {
+    padding: 12px 10px 10px;
+    font-size: 24px;
+    width: 48px;
+    height: 48px;
   }
 }
 
