STYLE: Responsive - home jumbotron overlay image removed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -643,4 +643,10 @@ a {
   .navigation-mobile {
     display: block;
   }
+
+  /* header */
+  .overlay-img {
+    display: none;
+    overflow: hidden;
+  }
 }
