--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,4 +744,21 @@ a {
   #paginationDots {
     display: none !important;
   }
+
+  .slide {
+    display: block;
+    min-width: 310px;
+    width: 310px;
+    height: 600px;
+    scroll-snap-align: center;
+    box-shadow: 0 0 24px rgba(0, 0, 0, 0.01);
+    transition: box-shadow 0.3s ease;
+    font-size: 2rem;
+    border-radius: 24px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
 }
