FEAT: Add Contact us paragraph with contact link in Contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ a {
 }
 
 .text-1-750 {
-  font-size: 1.5rem;
+  font-size: 1.75rem;
 }
 
 .text-1-500 {
@@ -556,6 +556,15 @@ a {
       rgba(229, 229, 229, 1) 0%,
       rgba(229, 229, 229, 0.9) 60%,
       rgba(229, 229, 229, 0) 100%);
+}
+
+/* SECTION - CONTACT US */
+.contact-us-para {
+  width: 440px;
+}
+
+.contact-link:hover {
+  color: #ED2D24;
 }
 
 /* SECTION - LINKEDIN AD */
