STYLE: Responsive - Contact page, resize jumbotron for mobiles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -794,6 +794,10 @@ a {
     height: 76px;
   }
 
+  .header-contact {
+    height: 320px;
+  }
+
   /* testimonials */
   #paginationDots {
     display: none !important;
