--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,6 +170,10 @@ a {
   background-color: #e5e5e5;
 }
 
+.bg-parc-llgrey {
+  background-color: #f5f5f5;
+}
+
 .bg-nav {
   background-color: rgba(255, 255, 255, 0.95);
 }
