--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -174,6 +174,10 @@ a {
   background-color: #f5f5f5;
 }
 
+.bg-parc-purple {
+  background-color: #8e67c2;
+}
+
 .bg-nav {
   background-color: rgba(255, 255, 255, 0.95);
 }
