STYLE: Update image of the Linkedin ad section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -640,6 +640,8 @@ a {
 /* SECTION - LINKEDIN AD */
 .section-linkedin-ad {
   height: 360px;
+  display: flex;
+  align-items: flex-end;
 }
 
 /* FOOTER */
